--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
 <!-- partial:index.partial.html -->
 <header>
+<div class="topnav">
+  <a href="./homepage.html">Home</a>
+  <a href="./lab1_lab2_files/shi-home.html">About</a>
+  <a href= "./index.html">Timeline</a>
+  <a href="./Timeline.html">Timeline 2</a>
+  
+  </div>
 	<nav>
 		<ul id="main_nav">
 			<li class="active all" data-title="all" title="All">All</li>
@@ -15,13 +23,12 @@
 			<li class="icon-graduation-cap active" data-title="film" title="Film"></li>
 			<li class="icon-briefcase active" data-title="activism" title="Activism"></li>
 			<li class="icon-user active" data-title="collaboration" title="Collaboration"></li>
-			
+
 		</ul>
-		<ul id="nav_ctrl">
-			<li class="icon-up-open" data-title="Next"></li>
-			<li class="icon-down-open" data-title="Previous"></li>
-		</ul>
+		
+		
 	</nav>
+	
 </header>
 <div id="instructions_container">
 	Use Keys 'J' and 'K' to navigate through the timeline.
@@ -33,13 +40,19 @@
 		</figure>
     <h1>Timeline of <br/> DeeDee Halleck</h1>
 	</header>
-	<ul>
+	
+	<ul class = "MyUL">
 		<li class="personal_event active">
 			<div class="event_icn icon-address"></div>
 			<div class="event_content">
+	
+		
 				<h2>Born</h2>
 				<p>
+				<iframe width="300" height="200" src="https://vimeo.com/241409563" frameborder="0" allowfullscreen></iframe>
 				</p>
+				
+			
 			</div>
 			<div class="event_date">
 				1940
@@ -73,7 +86,7 @@
 			<div class="event_content">
 				<h2>Highlander Folk School</h2>
 				<p>
-					https://www.highlandercenter.org/our-history-timeline/
+				<iframe src="https://player.vimeo.com/video/355885815" width="100" height="100" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>https://www.highlandercenter.org/our-history-timeline/
 				</p>
 			</div>
 			<div class="event_date">
@@ -558,7 +571,6 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 				2019
 			</div>
 		</li>
-		
 		
 	</ul>
 </div><!-- of #timeline_container -->
