--- a/homepage.html
+++ b/homepage.html
@@ -7,15 +7,24 @@
 <link rel="stylesheet" type="text/css" href="./active.css">
 </head>
 <body>
+<video width="320" height="240" controls autoplay>
+  <source src="time.mp4" type="video/mp4">
+  <source src="time.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+</div>
 <header>
+
 <div class="topnav">
   <a href="./homepage.html">Home</a>
-  <a href="./lab1_lab2_files/shi-home.html">About</a>
+  <a href="./about.html">About</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
-  </div>
+  
   </header>
+  </div>
  
   </body>
+
   </html>
 
