--- a/Timeline.html
+++ b/Timeline.html
@@ -10,13 +10,13 @@
 <header>
 <div class="topnav">
   <a href="./homepage.html">Home</a>
-  <a href="./lab1_lab2_files/shi-home.html">About</a>
+  <a href="./about.html">About</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
   </div>
   </header>
 <!-- Using Css from knightlab -->
-     <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+    <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
 	<!-----Using the js from knightlab--->
     <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 
