--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
 <div class="topnav">
   <a href="./homepage.html">Home</a>
-  <a href="./lab1_lab2_files/shi-home.html">About</a>
+  <a href="./about.html">About</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
   
