--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Kenny Shi </title>
-<link rel="stylesheet" type="text/css" href="./active.css">
+<link rel="stylesheet" type="text/css" href="./css/active.css">
 </head>
 <body>
 <video width="320" height="240" controls autoplay>
