--- a/Introduction.html
+++ b/Introduction.html
@@ -7,11 +7,7 @@
 <link rel="stylesheet" type="text/css" href="./css/active.css">
 </head>
 <body>
-
-
-
 <header>
-
 <div class="topnav">
   <a href="./homepage.html">Home</a>
   <a href= "./Introduction.html">Introduction</a>
@@ -22,11 +18,10 @@
   <a href="./about.html">About</a>
   </header>
   </div>
-  <video width="600" height="500" muted autoplay>
-  <source src="time.mp4" type="video/mp4">
+ <br><br>
+ <video width="600" height="500" controls>
+  <source src="intro.mp4" type="video/mp4">
 </video>
- 
   </body>
 
   </html>
-
