--- a/Timeline.html
+++ b/Timeline.html
@@ -3,16 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="./active2.css">
+<link rel="stylesheet" type="text/css" href="./css/active2.css">
 <title> Kenny Shi </title>
 </head>
 <body>
 <header>
 <div class="topnav">
-  <a href="./homepage.html">Home</a>
-  <a href="./about.html">About</a>
+   <a href="./homepage.html">Home</a>
+  <a href= "./Introduction.html">Introduction</a>
+  <a href= "./Photos.html">Photos</a>
+  <a href= "./Slideshow.html">Slideshow</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
+  <a href="./about.html">About</a>
   </div>
   </header>
 <!-- Using Css from knightlab -->
