--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Life timeline</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -11,9 +11,12 @@
 <header>
 <div class="topnav">
   <a href="./homepage.html">Home</a>
-  <a href="./about.html">About</a>
+  <a href= "./Introduction.html">Introduction</a>
+  <a href= "./Photos.html">Photos</a>
+  <a href= "./Slideshow.html">Slideshow</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
+  <a href="./about.html">About</a>
   
   </div>
 	<nav>
@@ -49,7 +52,7 @@
 		
 				<h2>Born</h2>
 				<p>
-				<iframe width="300" height="200" src="https://vimeo.com/241409563" frameborder="0" allowfullscreen></iframe>
+				
 				</p>
 				
 			
@@ -395,7 +398,7 @@
 			<div class="event_content">
 				<h2>Gulf Crisis TV Project</h2>
 				<p>
-					Co-Coordinator of Gulf Crisis TV Project. 10 half hour programs, Co-Producer/Director http://mediaburn.org/video/gulf-crisis-tv-project-part-4/")
+					Watch the<a target="_blank" href= "http://mediaburn.org/video/gulf-crisis-tv-project-part-4/"> Gulf Crisis TV Project</a> ""
 				</p>
 			</div>
 			<div class="event_date">
@@ -407,7 +410,7 @@
 			<div class="event_content">
 				<h2>Stones' Throw: TV from Cuba: Island in Goliath's Sea</h2>
 				<p>
-					 Four hour long compilations of Cuban TV. Producer/Curator 
+					 Four hour long compilations of Cuban TV. Producer/Creator
 				</p>
 			</div>
 			<div class="event_date">
@@ -419,7 +422,7 @@
 			<div class="event_content">
 				<h2>Gringo in Mañanaland</h2>
 				<p>
-					=HYPERLINK("https://www.youtube.com/watch?v=iR4NTOaJU64","Compilation archival film Producer/Director. https://www.youtube.com/watch?v=iR4NTOaJU64")
+					Watch the<a target="_blank" href="https://www.youtube.com/watch?v=iR4NTOaJU64"> Compilations</a> "
 				</p>
 			</div>
 			<div class="event_date">
@@ -431,8 +434,7 @@
 			<div class="event_content">
 				<h2>Lock Down USA</h2>
 				<p>
-					 Co-Producer/Director www.deedeehalleck.org/store.html
-Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the diminution of human rights for persons accused of crime and those incarcerated, the expansion of repressive forces in our communities and the closing of educational opportunities for prisoners. 
+				Lock Down USA looks at the burgeoning prison industry, the diminution of human rights for persons accused of crime and those incarcerated, the expansion of repressive forces in our communities and the closing of educational opportunities for prisoners. 
 				</p>
 			</div>
 			<div class="event_date">
@@ -468,7 +470,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 			<div class="event_content">
 				<h2>Showdown in Seattle: Five Days that Shook the WTO</h2>
 				<p>
-					 =HYPERLINK("https://www.youtube.com/watch?v=iRmol-yqQQI","Five programs https://www.youtube.com/watch?v=iRmol-yqQQI")
+					 Watch the<a target="_blank" href="https://www.youtube.com/watch?v=iRmol-yqQQI"> Five Programs</a> 
 				</p>
 			</div>
 			<div class="event_date">
@@ -490,7 +492,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 		<li class="personal_event">
 			<div class="event_icn icon-address"></div>
 			<div class="event_content">
-				<h2>Universidad of California San Diego</h2>
+				<h2>University of California San Diego</h2>
 				<p>
 					 Professor Emerita, Department of Communication, University of California, San Diego
 				</p>
@@ -504,7 +506,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 			<div class="event_content">
 				<h2>Ah! The Hopeful Pageantry of Bread and Puppet</h2>
 				<p>
-					 =HYPERLINK("http://breadandpuppet.org/","Co-Producer/Director  http://breadandpuppet.org/")
+					More about<a target="_blank" href="http://breadandpuppet.org/"> Bread and Puppet</a> 
 				</p>
 			</div>
 			<div class="event_date">
@@ -516,7 +518,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 			<div class="event_content">
 				<h2>Reverend Billy’s Peace Revival</h2>
 				<p>
-					 =HYPERLINK("http://www.revbilly.com/about","Executive Producer  http://www.revbilly.com")
+					Who was <a target="_blank" href="http://www.revbilly.com/about"> Reverend Billy</a> ?
 				</p>
 			</div>
 			<div class="event_date">
@@ -540,7 +542,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 			<div class="event_content">
 				<h2>Waves of Change</h2>
 				<p>
-					Waves of Change: The Many Voices of the Global Village is a multimedia project designed to survey community media around the world by compiling and archiving the creative use of participatory communication globally. Waves of Change acts as a platform to share pieces that in many cases are not seen beyond the locale of their production. Independent and community media can become sustainable by building a shared presence, using innovative and creative strategies and by developing national and regional regulations that support democratic media. deepdishtelevision_at_gmail_dot_com  http://www.deepdishwavesofchange.org/category/free-tag/deedee-halleck
+					Waves of Change: The Many Voices of the Global Village is a multimedia project designed to survey community media around the world by compiling and archiving the creative use of participatory communication globally. More information on <a target= "_blank" href = "http://www.deepdishwavesofchange.org/category/free-tag/deedee-halleck">Waves of Change</a>
 				</p>
 			</div>
 			<div class="event_date">
@@ -552,7 +554,7 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 			<div class="event_content">
 				<h2>Joel Kovel her husband died</h2>
 				<p>
-					 Documentary on <a href= "http://breadandpuppet.org/" title = "Bread and Puppet">Bread and Puppet</a> Co-Producer/Director
+					 Documentary on <a target= "_blank" href= "http://breadandpuppet.org/" title = "Bread and Puppet">Bread and Puppet</a> Co-Producer/Director
 				</p>
 			</div>
 			<div class="event_date">
@@ -562,9 +564,9 @@ Lock Down USA, 1997 Lock Down USA looks at the burgeoning prison industry, the d
 		<li class="activism_event">
 			<div class="event_icn icon-briefcase"></div>
 			<div class="event_content">
-				<h2>Supreme Court Decision  Dee Dee and Papoleto lost their case</h2>
+				<h2>Supreme Court Decision Dee Dee and Papoleto lost their case</h2>
 				<p>
-					https://www.law.cornell.edu/supremecourt/text/17-1702
+					Information on the <a target= "_blank" href= "https://www.law.cornell.edu/supremecourt/text/17-1702">court case</a>
 				</p>
 			</div>
 			<div class="event_date">
