--- a/about.html
+++ b/about.html
@@ -4,20 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Kenny Shi </title>
-<link rel="stylesheet" type="text/css" href="./active.css">
+<link rel="stylesheet" type="text/css" href="./css/active2.css">
 </head>
 <body>
 <header>
 <div class="topnav">
   <a href="./homepage.html">Home</a>
-  <a href="./about.html">About</a>
+  <a href= "./Introduction.html">Introduction</a>
+  <a href= "./Photos.html">Photos</a>
+  <a href= "./Slideshow.html">Slideshow</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
+  <a href="./about.html">About</a>
   </header>
   </div>
-  <br>
-<h2> Dee Dee Halleck has been a major player in the world of independent media for the last forty five years. Her contribution has influenced alternative media not only in the U.S., but in many other countries. She has been in the front lines of the movement to make video and other media accessible to those without a voice, those who have no power from the streets of Rio, Managua, New York City or Delhi.</h2>
-<br><h3>This is a web interactive documentary that includes the history of Ms. Halleck's life and work </h3>
+  <div class="transbox">
+	<h1> DeeDee Halleck's Story</h1>
+	<hr>
+	<img src= "./images/test.jpg"><br>
+    <p>Dee Dee Halleck has been a major player in the world of independent media for the last forty five years. Her contributions has influenced alternative media not only in the U.S., but in many other countries. She has been in the front lines of the movement to make video and other media accessible to those without a voice, those who have no power from the streets of Rio, Managua, New York City or Delhi. This is a web interactive documentary that includes the history of Ms. Halleck's life and work.</p><br><br><br><br><br>
+	<hr>
+  </div>
+ 
   </body>
 
   </html>
