--- a/Timeline.html
+++ b/Timeline.html
@@ -11,8 +11,8 @@
 <div class="topnav">
    <a href="./homepage.html">Home</a>
   <a href= "./Introduction.html">Introduction</a>
-  <a href= "./Photos.html">Photos</a>
-  <a href= "./Slideshow.html">Slideshow</a>
+  <a href= "./photos.html">Photos</a>
+  <a href= "./slideshow.html">Slideshow</a>
   <a href= "./index.html">Timeline</a>
   <a href="./Timeline.html">Timeline 2</a>
   <a href="./about.html">About</a>
