--- a/photos.html
+++ b/photos.html
@@ -20,7 +20,7 @@
   </div>
 
   
-<div class="img" style="background-image:url('./images2/age3.jpg');"></div>
+<div class="img" style="background-image:url('./images2/Age3.jpg');"></div>
 <div class="img" style="background-image:url('./images2/1957.jpg');"></div>
 <div class="img" style="background-image:url('./images2/1974.jpg');"></div>
 <div class="img" style="background-image:url('./images2/1981.png');"></div>
@@ -29,7 +29,7 @@
 <div class="img" style="background-image:url('./images2/2016.jpg');"></div>
 <div class="img" style="background-image:url('./images2/2018.jpg');"></div>
 <div class="img" style="background-image:url('./images2/Kentucky.jpg');"></div>
-<div class="img" style="background-image:url('./images2/listening.jpg');"></div>
+<div class="img" style="background-image:url('./images2/Listening.jpg');"></div>
 <div class="img" style="background-image:url('./images2/1.jpg');"></div>
 <div class="img" style="background-image:url('./images2/2.jpg');"></div>
 <div class="img" style="background-image:url('./images2/3.jpg');"></div>
