--- a/slideshow.html
+++ b/slideshow.html
@@ -23,13 +23,13 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 9</div>
-  <img src="./images/age3.jpg" style="width:100%">
+  <img src="./images/Age3.jpg" style="width:100%">
   <div class="text">1943: Dee Dee at age 3</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 9</div>
-  <img src="./images/1957.jpg" style="width:100%">
+  <img src="./images/1957.JPG" style="width:100%">
   <div class="text">1957</div>
 </div>
 <div class="mySlides fade">
@@ -54,7 +54,7 @@
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 / 9</div>
-  <img src="./images/2011.jpg" style="width:100%">
+  <img src="./images/2011.JPG" style="width:100%">
   <div class="text">2011: Waves of Change</div>
 </div>
 <div class="mySlides fade">
