--- a/Introduction.html
+++ b/Introduction.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Kenny Shi </title>
+<title> Introduction </title>
 <link rel="stylesheet" type="text/css" href="./css/active.css">
 </head>
 <body>
@@ -18,10 +18,9 @@
   <a href="./about.html">About</a>
   </header>
   </div>
- <br><br>
- <video width="600" height="500" controls>
-  <source src="intro.mp4" type="video/mp4">
-</video>
+  <p class = "intro" > An Introduction</p>
+ 
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/MUG6rPy04R8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 
   </html>
