--- a/Timeline.html
+++ b/Timeline.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="./css/active2.css">
-<title> Kenny Shi </title>
+<title> Timeline</title>
 </head>
 <body>
 <header>
@@ -45,8 +45,6 @@
                           <div class="tl-media-content">
                             <div class="tl-media-item tl-media-iframe tl-media-vimeo tl-media-shadow"
                             style="max-height: 405px; height: 133px;">
-                              <iframe class="" width="100%" height="100%" frameborder="0" src="./Kenny%20Shi_files/241409563.html"
-                              allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""></iframe>
                             </div>
                           </div>
                         </div>
@@ -2469,16 +2467,9 @@
       </div>
       <div class="tl-menubar" style="top: 453px;"></div>
     </div>
-    <!-- 3 -->
+
       <!-- 3 -->
       <script type="text/javascript">
-        // The TL.Timeline constructor takes at least two arguments:
-        // the id of the Timeline container (no '#'), and
-        // the URL to your JSON data file or Google spreadsheet.
-        // the id must refer to an element "above" this code,
-        // and the element must have CSS styling to give it width and height
-        // optionally, a third argument with configuration options can be passed.
-        // See below for more about options.
         timeline = new TL.Timeline('timeline-embed',
           'https://docs.google.com/spreadsheets/d/1PfOSSdvV49WZqv1_NA4Fk_aRgq5tqYnMJJ477Ch0y1w/edit#gid=1415740895');
       </script>
