--- a/about.html
+++ b/about.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Kenny Shi </title>
-<link rel="stylesheet" type="text/css" href="./css/active2.css">
-</head>
-<body>
-<header>
-<div class="topnav">
-  <a href="./homepage.html">Home</a>
-  <a href= "./Introduction.html">Introduction</a>
-  <a href= "./photos.html">Photos</a>
-  <a href= "./slideshow.html">Slideshow</a>
-  <a href= "./index.html">Timeline</a>
-  <a href="./Timeline.html">Timeline 2</a>
-  <a href="./about.html">About</a>
-  </header>
-  </div>
-  <div class="transbox">
-	<h1> DeeDee Halleck's Story</h1>
-	<hr>
-	<img src= "./images/test.jpg"><br>
-    <p>Dee Dee Halleck has been a major player in the world of independent media for the last forty five years. Her contributions has influenced alternative media not only in the U.S., but in many other countries. She has been in the front lines of the movement to make video and other media accessible to those without a voice, those who have no power from the streets of Rio, Managua, New York City or Delhi. This is a web interactive documentary that includes the history of Ms. Halleck's life and work.</p><br><br><br><br><br>
-	<hr>
-  </div>
- 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link rel="stylesheet" type="text/css" href="./css/active2.css" />
+  </head>
+  <body>
+    <header>
+      <div class="topnav">
+      <a href="./homepage.html">Home</a> 
+      <a href="./Introduction.html">Introduction</a> 
+      <a href="./photos.html">Photos</a> 
+      <a href="./slideshow.html">Slideshow</a> 
+      <a href="./index.html">Timeline</a> 
+      <a href="./Timeline.html">Timeline 2</a> 
+      <a href="./about.html">About</a></div>
+    </header>
+	<!---Transparent Box--->
+    <div class="transbox">
+      <h1>Dee Dee Halleck's Story</h1>
+      <hr />
+      <img src="./images/test.jpg" />
+      <br />
+      <p>Dee Dee Halleck has been a major player in the world of independent media for the last forty five years. Her contributions
+      has influenced alternative media not only in the U.S., but in many other countries. She has been in the front lines of the
+      movement to make video and other media accessible to those without a voice, those who have no power from the streets of Rio,
+      Managua, New York City or Delhi. This is a web interactive documentary that includes the history of Ms. Halleck's life
+      and work.</p>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <hr />
+    </div>
   </body>
-
-  </html>
-
+</html>
