--- a/homepage.html
+++ b/homepage.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Kenny Shi </title>
-<link rel="stylesheet" type="text/css" href="./css/active.css">
-</head>
-<body>
+  <head>
 
-
-
-<header>
-
-<div class="topnav">
-  <a href="./homepage.html">Home</a>
-  <a href= "./Introduction.html">Introduction</a>
-  <a href= "./photos.html">Photos</a>
-  <a href= "./slideshow.html">Slideshow</a>
-  <a href= "./index.html">Timeline</a>
-  <a href="./Timeline.html">Timeline 2</a>
-  <a href="./about.html">About</a>
-  </header>
-  </div>
-  <video width="600" height="500" muted autoplay>
-  <source src="time.mp4" type="video/mp4">
-</video>
- 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="./css/active.css" />
+  </head>
+  <body>
+    <header>
+      <div class="topnav">
+      <a href="./homepage.html">Home</a> 
+      <a href="./Introduction.html">Introduction</a> 
+      <a href="./photos.html">Photos</a> 
+      <a href="./slideshow.html">Slideshow</a> 
+      <a href="./index.html">Timeline</a> 
+      <a href="./Timeline.html">Timeline 2</a> 
+      <a href="./about.html">About</a></div>
+    </header>
+    <video width="600" height="500" muted autoplay>
+      <source src="time.mp4" type="video/mp4" />
+    </video>
   </body>
-
-  </html>
-
+</html>
