--- a/slideshow.html
+++ b/slideshow.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Kenny Shi </title>
+<title> Slideshow </title>
 <link rel="stylesheet" type="text/css" href="./css/active4.css">
 </head>
 <body>
@@ -23,13 +23,13 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 9</div>
-  <img src="./images/Age3.jpg" style="width:100%">
+  <img src="./images/age3.jpg" style="width:100%">
   <div class="text">1943: Dee Dee at age 3</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 9</div>
-  <img src="./images/1957.JPG" style="width:100%">
+  <img src="./images/1957.jpg" style="width:100%">
   <div class="text">1957</div>
 </div>
 <div class="mySlides fade">
@@ -54,7 +54,7 @@
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 / 9</div>
-  <img src="./images/2011.JPG" style="width:100%">
+  <img src="./images/2011.jpg" style="width:100%">
   <div class="text">2011: Waves of Change</div>
 </div>
 <div class="mySlides fade">
@@ -84,27 +84,7 @@
 				  
 </div>
 
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 5000); // Change image every 5 seconds
-}
-</script>
+<script src="./slideshow.js"></script>
 
 </body>
 </html> 
