--- a/Timeline.html
+++ b/Timeline.html
@@ -20,7 +20,7 @@
   </header>
 <!-- Using Css from knightlab -->
     <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
-	<!-----Using the js from knightlab--->
+	<!--Using the js from knightlab-->
     <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 
      
