--- a/photos.html
+++ b/photos.html
@@ -18,16 +18,16 @@
   <a href="./about.html">About</a>
   </header>
   </div>
-	<div class="img" style="background-image:url('./images2/age3.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/1957.jpg');"></div>
+	<div class="img" style="background-image:url('./images2/Age3.jpg');"></div>
+	<div class="img" style="background-image:url('./images2/1957.JPG');"></div>
 	<div class="img" style="background-image:url('./images2/1974.jpg');"></div>
 	<div class="img" style="background-image:url('./images2/1981.png');"></div>
 	<div class="img" style="background-image:url('./images2/1986.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/2011.jpg');"></div>
+	<div class="img" style="background-image:url('./images2/2011.JPG');"></div>
 	<div class="img" style="background-image:url('./images2/2016.jpg');"></div>
 	<div class="img" style="background-image:url('./images2/2018.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/Kentucky.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/listening.jpg');"></div>
+	<div class="img" style="background-image:url('./images2/Kentucky.JPG');"></div>
+	<div class="img" style="background-image:url('./images2/Listening.jpg');"></div>
 	<div class="img" style="background-image:url('./images2/1.jpg');"></div>
 	<div class="img" style="background-image:url('./images2/2.jpg');"></div>
 	<div class="img" style="background-image:url('./images2/3.jpg');"></div>
