--- a/index.html
+++ b/index.html
@@ -423,5 +423,7 @@
   <!-- of #info_container -->
   <!-- partial -->
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> 
-  <script src="./js/script.js"></script></body>
+  <script src="./js/script2.js"></script>
+  <script src="./js/script.js"></script>
+</body>
 </html>
