--- a/photos.html
+++ b/photos.html
@@ -17,22 +17,140 @@
   <a href="./Timeline.html">Timeline 2</a>
   <a href="./about.html">About</a>
   </header>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/Age3.jpg" alt="Age 3">
+    </a>
+    <div class="desc">1943: Dee Dee at age 3 </div>
   </div>
-	<div class="img" style="background-image:url('./images2/Age3.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/1957.JPG');"></div>
-	<div class="img" style="background-image:url('./images2/1974.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/1981.png');"></div>
-	<div class="img" style="background-image:url('./images2/1986.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/2011.JPG');"></div>
-	<div class="img" style="background-image:url('./images2/2016.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/2018.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/Kentucky.JPG');"></div>
-	<div class="img" style="background-image:url('./images2/Listening.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/1.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/2.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/3.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/4.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/video.jpg');"></div>
-	<div class="img" style="background-image:url('./images2/5.jpg');"></div>
-  </body>
-  </html>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/1957.JPG" alt="1957">
+    </a>
+    <div class="desc">1957</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/Listening.jpg" alt="Listening">
+    </a>
+    <div class="desc">Listening to Nagra</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/1.jpg" alt="Dee Dee" >
+    </a>
+    <div class="desc">Dee Dee Halleck</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/1974.jpg" alt="1974">
+    </a>
+    <div class="desc">1974</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/2.jpg" alt="Dee Dee Halleck">
+    </a>
+    <div class="desc">Dee Dee Halleck</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/3.jpg" alt="Dee Dee Halleck" >
+    </a>
+    <div class="desc">Dee Dee Halleck</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/4.jpg" alt="Dee Dee Halleck" >
+    </a>
+    <div class="desc">Dee Dee Halleck</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/5.jpg" alt="Dee Dee Halleck">
+    </a>
+    <div class="desc">Dee Dee Halleck</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/1981.PNG" alt="1981" >
+    </a>
+    <div class="desc">1981</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/1986.jpg" alt="1986">
+    </a>
+    <div class="desc">1986</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/2011.jpg" alt="2011" >
+    </a>
+    <div class="desc">2011</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/2016.jpg" alt="2016">
+    </a>
+    <div class="desc">2016</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/2018.jpg" alt="Mountains">
+    </a>
+    <div class="desc">2018</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/Teaching.jpg" alt="otisville" >
+    </a>
+    <div class="desc">Dee Dee teaching video camera otisville</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="Timeline.html">
+      <img src="./images2/Kentucky.jpg" alt="Kentucky" >
+    </a>
+    <div class="desc">Kentucky</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+</body>
+</html>
