--- a/photos.html
+++ b/photos.html
@@ -96,7 +96,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="Timeline.html">
-      <img src="./images2/1981.PNG" alt="1981" >
+      <img src="./images2/1981.png" alt="1981" >
     </a>
     <div class="desc">1981</div>
   </div>
@@ -112,7 +112,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="Timeline.html">
-      <img src="./images2/2011.jpg" alt="2011" >
+      <img src="./images2/2011.JPG" alt="2011" >
     </a>
     <div class="desc">2011</div>
   </div>
@@ -136,7 +136,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="Timeline.html">
-      <img src="./images2/Teaching.jpg" alt="otisville" >
+      <img src="./images2/Teaching.JPG" alt="otisville" >
     </a>
     <div class="desc">Dee Dee teaching video camera otisville</div>
   </div>
@@ -144,7 +144,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="Timeline.html">
-      <img src="./images2/Kentucky.jpg" alt="Kentucky" >
+      <img src="./images2/Kentucky.JPG" alt="Kentucky" >
     </a>
     <div class="desc">Kentucky</div>
   </div>
