--- a/photos.html
+++ b/photos.html
@@ -136,7 +136,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="Timeline.html">
-      <img src="./images2/Teaching.JPG" alt="otisville" >
+      <img src="./images2/Teaching.jpg" alt="otisville" >
     </a>
     <div class="desc">Dee Dee teaching video camera otisville</div>
   </div>
